# draft2svg

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  test_decomposed.py
examples/: input1_ground_truth.json  input2_ground_truth.json
graph2svg/: __init__.py  cli.py  extractor.py  layout.py  model.py  renderer.py  styles.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_layout.py  test_model.py  test_renderer.py  test_styles.py
